# advent-of-code

./: choose_lang.sh
2023/first_day/: Makefile  go.mod
2024/: .gitignore
2024/day_1/: go.mod  main.go
2024/day_10/: Makefile
2024/day_11/: day11.test.ts  day_11.ts  pnpm-lock.yaml
2024/day_12/: day12_test.go  go.mod  main.go
2024/day_14/: Cargo.toml
2024/day_16/: Makefile  day_16.c  day_16.h  main.py  test.c  test.h
2024/day_17/: CMakeLists.txt  day_17.cpp  day_17.h  day_17_test.cc  run_test.sh
2024/day_18/: day_18_test.go  go.mod  main.go
2024/day_19/: CMakeLists.txt  day_19.cpp  day_19.h  day_19_test.cc  main.py  true.txt
2024/day_2/: .gitignore  settings.gradle
2024/day_20/: Cargo.toml  main.py
2024/day_21/: day21_test.go  go.mod  main.go
2024/day_22/: day22.test.ts  day_22.ts  main.py  pnpm-lock.yaml
2024/day_23/: Gemfile
2024/day_24/: day24.test.ts  day_24.ts  package.json
2024/day_25/: day25_test.go  go.mod  main.go
2024/day_4/: example.txt  main.py
2024/day_5/: day5.test.ts  day5.ts  example.txt
2024/day_6/: test
2024/day_7/: pyproject.toml
2024/day_8/: pyproject.toml
2025/day_1/: Makefile  a.out  day_1.c  day_1.h  main.c  test  test-day_1.gcda  test-day_1.gcno  test-test.gcda  test-test.gcno  test.c  test.c.gcov  test.h  test.txt
2025/day_10/: day10.test.ts  day_10.ts  test.py
2025/day_11/: Makefile  day_11.c  day_11.h  simple.py  test  test-day_11.gcda  test-day_11.gcno  test-test.gcda  test-test.gcno  test.c  test.c.gcov  test.h
2025/day_12/: day_12.test.ts  day_12.ts  package.json  test.py
2025/day_2/: .close  Makefile
2025/day_3/: Makefile  day_3.c  day_3.h  test.c  test.h
2025/day_4/: pyproject.toml
2025/day_5/: day5.test.ts  day_5.ts
2025/day_6/: day6.test.ts  day_6.ts
(+34 files in other folders)
